[package]
name = "stealthgen"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bincode = "3.0.0"
blake3 = "1.8.5"
bs58 = "0.5.1"
curve25519-dalek = {version = "4.1.3", features = ["rand_core"]}
futures-util = "0.3.32"
rand = "0.8"
rng = "0.1.0"
solana-address = "2.5"
solana-client = "4.0.0"
solana-instruction = "3.2.0"
solana-keypair = "3.1"
solana-sdk = "4.0.1"
solana-signer = "3.0"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-transaction = "3.1"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
